# notebooklm-toolkit

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt  run.py
cli/: add.py  ask.py  auth.py  download.py  list.py
examples/: weekly_workflow.py
notebooklm/: __init__.py  auth.py  browser.py  config.py  discovery.py  download.py  library.py  query.py
